# monad-offline-ai

./: .cursorrules  .gitignore  BUILD_READINESS_REPORT.md  GITHUB_SETUP.md  NEXT_ACTIONS.md  PHI3_UPGRADE_GUIDE.md  README.md  cleanup_project.sh  env  package.json
INVESTMENT DOCS/: MONAD_Executive_Summary.docx
INVESTMENT DOCS/files/: MONAD_Business_Plan.md  MONAD_Executive_Summary.docx  MONAD_One_Pager.docx  (+3 more)
backend/: config.py  dependencies.py  download_model.sh  env.example  llm_runner.py  main.py  paths.py  requirements.txt  validate_setup.py
desktop/: package-lock.json  package.json
docs/: BACKEND_STABILITY_FIX_v2.md  BRAND_GUIDE.md  BUILD_READINESS_DEV_RESET.md  BUILD_VERIFICATION.md  BUILD_VERIFICATION_REPORT.md  BYPASS_SERVER_VERIFICATION_REPORT.md  DESIGN_SYSTEM_PREVIEW.md  DEV_RESET_BEHAVIOR.md  DEV_RESET_IMPLEMENTATION_SUMMARY.md  DEV_RESET_TEST_REPORT.md  DISTRIBUTION_PLAN.md  FAILOVER_VERIFICATION_REPORT.md  FINAL_FAILOVER_VALIDATION.md  FINAL_QA_VERIFICATION_REPORT.md  INDEX.md  MODEL_SETUP.md  ONEDRIVE_WARNING.md  PACKAGING_READINESS.md  PHI3_UPGRADE_GUIDE.md  PROJECT_AUDIT_REPORT.md  PROJECT_STATUS_AUDIT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QA_STATUS.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.2.md  SECURITY.md  TESTING.md  TESTING_README.md  TYPOGRAPHY_SPACING_VALIDATION.md  UI_BRANDING_VALIDATION.md  USER_GUIDE.md  UX_POLISH_VALIDATION.md  VALIDATION_REPORT_TEMPLATE.md  WHITE_SCREEN_ANALYSIS.md  smoke-test-checklist.md
frontend/: .gitignore  index.html  package-lock.json  package.json  verify-build.sh  vite.config.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: main.rs
offline-llm-appliance/: .gitignore  FIXES_SUMMARY.md  MODEL_SETUP.md  README.md
offline-llm-appliance/desktop/src-tauri/: Cargo.toml
scripts/: cleanup_project.sh  verify_reset.sh
(+129 files in other folders)
