[package]
name = "monad"
version = "1.0.0"
description = "MONAD Offline AI - Secure, Personalized & Professional Offline AI Platform"
authors = ["MONAD Team"]
license = "MIT"
repository = "https://github.com/yourusername/monad-v3"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "6"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
