[package]
name = "monad-desktop"
version = "1.0.0"
description = "MONAD Offline AI Desktop Application"
authors = ["MONAD Team"]
license = "MIT"
repository = "https://github.com/monad/offline-ai"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-create-dir", "path-all", "os-all", "fs-exists", "shell-open", "fs-write-file", "fs-copy-file", "http-all", "fs-read-dir", "fs-remove-file", "system-tray", "fs-rename-file", "fs-remove-dir", "process-all", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
